---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 11. 03. 2025
  Minor Features:
    - Added setting for nuclear artillery shell crafting time; defaults to 120 (minummum of 1)
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 11. 03. 2025
  Bugfixes:
    - Fixed the changelog versions
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 11. 03. 2025
  Bugfixes:
    - Actually set the crafting time to 120 seconds now
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 09. 03. 2025
  Major Features:
    - Initial release