@@ -1,5 +1,7 @@
 [mod-setting-name]
 nas-tweaks-crafting-time=Time to craft a Nuclear Artillery Shell in seconds
+nas-tweaks-too-heavy-for-rocket=Enable weight restriction
 
 [mod-setting-description]
 nas-tweaks-crafting-time=Defaults to 120 (minimum of 1)
+nas-tweaks-too-heavy-for-rocket=Makes the nuclear artillery shell too heavy to launch via a Rocket Silo (i.e. final product must be made on site or in orbit)
