@@ -5,5 +5,11 @@ data:extend({
       setting_type = "startup",
       default_value = 120,
       minimum_value = 1,
-  }
+  },
+  {
+    type = "bool-setting",
+    name = "nas-tweaks-too-heavy-for-rocket",
+    setting_type = "startup",
+    default_value = true,
+}
 })
